terraform-code/13a-nginx-launch-template.tf



# launch template for nginx

resource "aws_launch_template" "nginx-launch-template" {
  name = "kn-nginx"

  block_device_mappings {
    device_name = "/dev/sda1"

    ebs {
      volume_size = 20
    }
  }


  image_id = "ami-020cba7c55df1f615"

  instance_initiated_shutdown_behavior = "terminate"

  instance_type = "t2.micro"

  key_name = "devops"


  monitoring {
    enabled = true
  }

  placement {
    availability_zone = "us-east-1a"
  }


  vpc_security_group_ids = [aws_security_group.nginx-sg.id]

  tag_specifications {
    resource_type = "instance"


    tags = {
      Name = "nginx-launch-template"
    }
  }

  # user_data = filebase64("${path.module}/bin/nginx.sh")
}
